// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutPreview renders total cost 1`] = `
<div
  class="checkout-preview__total-cost"
>
  Total Cost = 
  366
</div>
`;

exports[`CheckoutPreviewItem renders a single preview item 1`] = `
<div
  data-testid="previewItemContainer"
>
  <div
    class="checkout-preview-item"
  >
    <span
      class="checkout-preview-item__name"
    >
      Me Smiling
    </span>
    <img
      src="placeholder"
    />
    <span
      class="checkout-preview-item__cart-amount"
    >
      Amount in cart: 
      5
    </span>
    <span
      class="checkout-preview-item__total-price"
    >
      Total Price: 
      160
       (
      5
       X 
      32
      )
    </span>
    <button
      type="button"
    >
      Remove Item
    </button>
  </div>
</div>
`;

exports[`CheckoutPreviewItem renders multiple items 1`] = `
<div
  data-testid="previewItemContainer"
>
  <div
    class="checkout-preview-item"
  >
    <span
      class="checkout-preview-item__name"
    >
      Me Smiling
    </span>
    <img
      src="placeholder"
    />
    <span
      class="checkout-preview-item__cart-amount"
    >
      Amount in cart: 
      5
    </span>
    <span
      class="checkout-preview-item__total-price"
    >
      Total Price: 
      160
       (
      5
       X 
      32
      )
    </span>
    <button
      type="button"
    >
      Remove Item
    </button>
  </div>
  <div
    class="checkout-preview-item"
  >
    <span
      class="checkout-preview-item__name"
    >
      Me With a frown
    </span>
    <img
      src="placeholder"
    />
    <span
      class="checkout-preview-item__cart-amount"
    >
      Amount in cart: 
      2
    </span>
    <span
      class="checkout-preview-item__total-price"
    >
      Total Price: 
      130
       (
      2
       X 
      65
      )
    </span>
    <button
      type="button"
    >
      Remove Item
    </button>
  </div>
  <div
    class="checkout-preview-item"
  >
    <span
      class="checkout-preview-item__name"
    >
      Me
    </span>
    <img
      src="placeholder"
    />
    <span
      class="checkout-preview-item__cart-amount"
    >
      Amount in cart: 
      4
    </span>
    <span
      class="checkout-preview-item__total-price"
    >
      Total Price: 
      76
       (
      4
       X 
      19
      )
    </span>
    <button
      type="button"
    >
      Remove Item
    </button>
  </div>
</div>
`;
